--- a/bin/Home.fxml
+++ b/bin/Home.fxml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<VBox xmlns:fx="http://javafx.com/javafx"
-      xmlns="http://javafx.com/javafx"
-      fx:controller="Home">
-    <Label text="Masukkan bahan untuk mencari resep:"/>
-    <TextField fx:id="searchField" promptText="Contoh: ayam, bawang putih"/>
-    <Button text="Cari Resep" onAction="#searchRecipes"/>
-    <Label text="Hasil Pencarian:"/>
-    <ListView fx:id="searchResults" prefHeight="200"/>
-    <Label text="Detail Resep:"/>
-    <TextArea fx:id="recipeDetails" editable="false" wrapText="true"/>
+<VBox prefHeight="686.0" prefWidth="538.0" spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Home">
+   <Pane prefHeight="590.0" prefWidth="590.0">
+      <children>
+          <Button layoutX="452.0" layoutY="91.0" onAction="#searchRecipes" text="Cari Resep" />
+          <TextField fx:id="searchField" layoutX="51.0" layoutY="52.0" prefHeight="25.0" prefWidth="475.0" promptText="Cari berdasarkan bahan atau kata kunci..." />
+          <ListView fx:id="searchResults" layoutX="49.0" layoutY="123.0" prefHeight="195.0" prefWidth="475.0" />
+          <TextArea fx:id="recipeDetails" editable="false" layoutX="14.0" layoutY="358.0" prefHeight="195.0" prefWidth="565.0" />
+           <Button layoutX="281.0" layoutY="630.0" onAction="#scheduleRecipe" text="Jadwalkan Resep" />
+           <Button layoutX="131.0" layoutY="630.0" onAction="#saveRecipe" text="Simpan Resep" />
+         <Text layoutX="167.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selamat Datang Di EasyCook" />
+      </children>
+   </Pane>
+    <HBox spacing="10" />
 </VBox>
