--- a/bin/ScheduledRecipes.fxml
+++ b/bin/ScheduledRecipes.fxml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10" xmlns:fx="http://javafx.com/fxml" fx:controller="ScheduledRecipes">
-    <ListView fx:id="scheduledRecipeList" />
-    <TextArea fx:id="recipeDetails" editable="false" />
-    <Button text="Hapus Resep Terjadwal" onAction="#deleteScheduledRecipe" />
+<VBox spacing="10" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduledRecipes">
+   <Pane prefHeight="590.0" prefWidth="590.0">
+      <children>
+          <ListView fx:id="scheduledRecipeList" layoutX="57.0" layoutY="60.0" prefHeight="195.0" prefWidth="475.0" />
+          <TextArea fx:id="recipeDetails" editable="false" layoutX="16.0" layoutY="275.0" prefHeight="195.0" prefWidth="565.0" />
+          <Button layoutX="15.0" layoutY="615.0" onAction="#deleteScheduledRecipe" text="Hapus Resep Terjadwal" />
+          <Button layoutX="172.0" layoutY="615.0" onAction="#editScheduledRecipe" text="Ubah Jadwal Resep" />
+          <Button layoutX="475.0" layoutY="615.0" onAction="#refreshScheduledRecipes" text="Refresh" />
+      </children>
+   </Pane>
 </VBox>
